# grpc-example-service-rs

./: .gitignore  Cargo.toml  Dockerfile  Makefile  build.rs  docker-compose.yml
api/: example-service.proto
src/: example_service.rs  main.rs
